# ai-uc-rag-evaluation-data

./: .gitignore  .trivyignore  Dockerfile  README.md  compose.debug.yml  compose.yml  ingest_local.py  pgvector.Dockerfile  pyproject.toml  sonar-project.properties
.github/workflows/: check-pull-request.yml  publish-hotfix.yml  publish.yml  scan.yml
app/: config.py
app/client/: __init__.py  client.py  models.py
app/common/: bedrock.py  http_client.py  id_utils.py  log_utils.py  metrics.py  mongo.py  postgres.py  s3.py  tracing.py
app/common/embedding/: pydantic_ai.py  service.py
app/entrypoints/: cli.py  fastapi.py
app/health/: router.py
app/infra/: fastapi_app.py  mcp_server.py
app/ingestion/: models.py  repository.py  service.py
app/knowledge_management/: api_schemas.py  dependencies.py  models.py  repository.py  router.py  service.py
app/rag/: api_schemas.py  dependencies.py  router.py  service.py
app/snapshot/: api_schemas.py  dependencies.py  mcp_tools.py  models.py  orm_models.py  repository.py  router.py  service.py
app/upload/: dependencies.py  models.py  orm_models.py  repository.py  router.py  service.py
changelog/: db.changelog-1.0.xml  db.changelog-2.0.xml  db.changelog-3.0.xml  db.changelog-4.0.xml  db.changelog.xml
compose/: app.env  postgres.env  start-localstack.sh
docs/ai/: project-context.md
migrator/: Dockerfile  run-setup.sh
tests/: conftest.py
tests/client/: test_client.py
tests/common/embedding/: test_pydantic_ai.py
tests/entrypoints/http/: test_main.py
tests/knowledge_management/: test_service.py
tests/rag/: test_router.py  test_service.py
tests/snapshot/: test_service.py
tests/upload/: test_repository.py  test_router.py  test_service.py
